--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <a href="/New folder/product.html">Go product</a>
+    <a href="./product/product.html">Go product</a>
 
     <form onsubmit="storeProducts(event)" id="adminpanel">
         <div class="product">
